# Zen

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  TODO.md  apply-license.sh  lines.md  style  t  t.c
benchmark/sum/: sum.js  sum.zen
doc/: annotations.md  binary-entity-format.txt  garbage-collector.md  index.html  introduction.md
doc/generator/: University.zen
dump/: ParserRuleContext.h  RuleNode.h
example/: BinarySearch.zen  BubbleSort.zen  MaxInteger.zen  PaymentCalculator.zen  SelectionSort.zen  SimpleDownloader.zen  ThrowStatement.zen
example/read/: Read.z
example/student/: Student.zen
example/sum-of-array/: SumOfArray.zen
include/com/onecube/zen/: Configuration.h
include/com/onecube/zen/assembler/: AssemblyToken.h
include/com/onecube/zen/compiler/: Compiler.h  Error.h  ErrorCode.h  ErrorHandler.h  InputStream.h  LogPriority.h  Logger.h  Pair.h  StackTrace.h  String.h  StringBuilder.h
include/com/onecube/zen/compiler/ast/: ASTAnnotationType.h  ASTAnnotations.h  ASTHelper.h  ASTListener.h  ASTNode.h  ASTNodeType.h  ASTPrinter.h  ASTWalker.h  ASTWalkerState.h  AstAnnotation.h  AstAnnotationType.h  AstAnnotations.h  AstPrinter.h  Context.h  ExpressionAnnotation.h  ParserRuleContext.h  RuleNode.h
include/com/onecube/zen/compiler/generator/: BinaryEntityBuilder.h  BinaryEntityBuilder__.h  BinaryEntityGenerator.h  ByteCodeChannel.h  ByteCodeChannelStack.h  ChannelManager.h  CodeGenerator.h  ConstantPoolBuilder.h  DataChannel.h
include/com/onecube/zen/compiler/lexer/: Lexer.h  LexerError.h  Token.h  TokenChannel.h  TokenStream.h  TokenType.h
include/com/onecube/zen/compiler/parser/: Parser.h  ParserError.h
include/com/onecube/zen/compiler/support/: Error.h  ErrorCode.h  ErrorHandler.h  StackTrace.h
include/com/onecube/zen/compiler/symbol-table/: AnnotationSymbol.h  ClassScope.h  ClassSymbol.h  CompilationUnitScope.h  ConstantSymbol.h  EnumerateSymbol.h  EnumerationScope.h  EnumerationSymbol.h  FunctionScope.h  FunctionSignature.h  FunctionSymbol.h  LabelSymbol.h  LocalScope.h  MemberClassSymbol.h  MemberConstantSymbol.h  MemberEnumerationSymbol.h  MemberVariableSymbol.h  Modifier.h  Scope.h  ScopeType.h  Symbol.h  SymbolCategory.h  SymbolDefinitionListener.h  SymbolLoader.h  SymbolResolutionListener.h  SymbolTable.h  VariableSymbol.h
include/com/onecube/zen/disassembler/: BinaryEntityDisassembler.h
include/com/onecube/zen/virtual-machine/: ExceptionManager.h  VirtualMachine.h  VirtualMachineConfiguration.h  VirtualMachineGarbageCollectorListener.h
include/com/onecube/zen/virtual-machine/feb/: AnnotationEntity.h  Attribute.h  AttributeTable.h  AuxillaryAttribute.h  BinaryEntityFormat.h  ByteCode.h  ClassEntity.h  CodeAttribute.h  ConstantPoolClass.h  ConstantPoolInteger.h  ConstantPoolLong.h  ConstantPoolString.h  ConstantValueAttribute.h  Entity.h  EntityFile.h  EntityFlag.h  EntityType.h  EnumerateEntity.h  EnumerationEntity.h  ExceptionHandlerSite.h  ExceptionTable.h  ExceptionTableAttribute.h  FebVersion.h  FieldEntity.h  FunctionEntity.h  Instruction.h  InstructionAttribute.h  PackageEntity.h  PredefinedAttribute.h  PrimitiveType.h  SourceFileAttribute.h  Type.h
include/com/onecube/zen/virtual-machine/loader/: AttributeParseRuleMap.h  AttributeParseRules.h  BinaryEntityLoader.h  BinaryEntityParser.h  BinaryEntityVerifier.h  ClassLoader.h  EntityDescriptor.h  EntityLoader.h  EntityResolver.h  ResolutionManager.h
include/com/onecube/zen/virtual-machine/memory/: MemoryManager.h  ObjectType.h  PendingMessageQueue.h  PrimaryMemoryManager.h  module.h
include/com/onecube/zen/virtual-machine/object/: Class.h  Field.h  Function.h  NativeFunction.h  Object.h  ObjectArray.h
include/com/onecube/zen/virtual-machine/processor/: Interpreter.h  InvocationStack.h  LocalVariableArray.h  OperandStack.h  Processor.h  ProcessorThread.h  StackFrame.h
module/source/com/onecube/json/: JsonParser.z
module/source/zen/collection/: Arrays.z
module/source/zen/collection/array/: ArrayDecorator.z  ArrayHelper.z
module/source/zen/collection/map/: HashMap.z  HashMapEntry.z
module/source/zen/core/: ConstraintViolationException.z  Integer.z  Object.z  ObjectHelper.z  RuntimeException.z  String.z
module/source/zen/core/annotation/: Annotation.z  AttributeAnnotation.z  ClassAnnotation.z  DecimalValue.z  EntityAnnotation.z  EnumerateAnnotation.z  EnumerationAnnotation.z  ExpectsNonNull.z  FieldAnnotation.z  FunctionAnnotation.z  IntegerValue.z  InterfaceAnnotation.z  MetaAnnotation.z  ParameterAnnotation.z  PrimaryEntityAnnotation.z  ReturnValueAnnotation.z  ReturnsNonNull.z  SecondaryEntityAnnotation.z  StringValue.z  TertiaryEntityAnnotation.z
module/source/zen/math/sequence/: IntegerSequenceIterator.zen
module/source/zen/mirror/: BinaryEntityFormatException.z  UnknownEntityMagicNumberException.z  UnsupportedEntityVersionException.z
module/zen/core/: Operator.zen
module/zen/support/: ZenHelper.zen
pulsarvm/: CODE_OF_CONDUCT.md  style
pulsarvm/include/com/onecube/zen/: Configuration.h
pulsarvm/include/com/onecube/zen/virtual-machine/: ExceptionManager.h  VirtualMachineConfiguration.h
pulsarvm/source/com/onecube/zen/: Configuration.c
pulsarvm/source/com/onecube/zen/virtual-machine/: VirtualMachineContext.c  VirtualMachineGarbageCollectorListener.c
source/: Zen.g4
source/com/onecube/zen/: Configuration.c  DisassemblerTool.c  ErrorHandler.c  InputStream.c  RuleNode.c  String.c  StringBuilder.c  Zen.c  Zvm.c  ZvmSpecificationViewer.c
source/com/onecube/zen/compiler/: Compiler.c
source/com/onecube/zen/diassembler/: BinaryEntityDisassembler.c
source/com/onecube/zen/disassembler/: BinaryEntityDisassembler.c
source/com/onecube/zen/virtual-machine/: ExceptionManager.c  VirtualMachine.c  VirtualMachineConfiguration.c  VirtualMachineContext.c  VirtualMachineGarbageCollectorListener.c  zend.c
tmp/doc/: Doc.txt
tmp/example/: BubbleSort.zen
tmp/example/factorial/: factorial.zen
tmp/example/knn/: knn.z
tmp/example/linear-search/: LinearSearch.zen
tmp/source/com/onecube/zen/: String.c
(+356 files in other folders)
